Prevent crashes when the lineedit is deleted before the slot is called.

BUG:103439

svn path=/branches/KDE/3.5/kdepim/; revision=449530